# urw-data-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
config/: loguru.yaml
constants/: column_names.py  constants.py  paths.py
data/: raw.dvc
docs/: DVC_WORKFLOW.md  METRICS.md  MLFLOW_WORKFLOW.md  ROADMAP.md  SETUP.md
notebooks/: eda.ipynb  synergy.ipynb
src/: streamlit_app.py
src/data_pipelines/: intermediate_to_enriched.py  raw_to_intermediate.py
src/utils/: logger.py
