[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["constants", "src"]

[tool.setuptools.package-data]
"*" = []

[project]
name = "17-urw-data-challenge"
version = "0.1.0"
authors = [{name = "Augustin Naton", email = "augustin.naton@gmail.com"}]
description = "URW data challenge for the XHEC Data Science and AI for Business course."
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "dvc>=3.66.0",
    "dvc-s3>=3.2.2",
    "pandas>=2.3.3",
    "statsmodels>=0.14.6",
]


[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "ipykernel>=7.0.1",
    "plotly>=6.5.0",
    "matplotlib>=3.10.8",
    "ipywidgets>=8.1.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstring conventions)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["17-urw-data-challenge"]
force-sort-within-sections = true
